--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -17,7 +17,10 @@ jobs:
     runs-on: ubuntu-latest
     if: github.actor != 'github-classroom[bot]'
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '20'
+      - uses: actions/checkout@v4        
       - uses: education/autograding@v1
         env:
           FORCE_JAVASCRIPT_ACTIONS_TO_NODE20: true
